# taller-langchain-agentes

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebook/: taller_langchain.ipynb
src/agente/: __init__.py  agent.py  prompts.py  tools.py
